Proyecot ciclo de vida

--- a/Codigo/app/src/main/res/values/strings.xml
+++ b/Codigo/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">DragonBallClase</string>
+    <string name="titulo_ej_google">Hi! I\'m the title!</string>
+    <string name="name">Name</string>
+
 </resources>
