--- a/DragonBallFinal/app/src/main/res/values/strings.xml
+++ b/DragonBallFinal/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DragonBallFinal</string>
+    <string name="select_hero">Select your Hero</string>
 </resources>
